--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -91,7 +91,9 @@ jobs:
           java-version: '8'
       
       - name: Install build dependencies
-        run: sudo apt install -y xorg-dev gcc-multilib
+        run: |
+          sudo apt update
+          sudo apt install xorg-dev gcc-multilib
 
       - name: Build
         run: ./gradlew buildFromLinux
