Host OS specific custom gradle tasks

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,22 @@
+kotlinVersion=1.4.32
 kotlin.code.style=official
 kotlin.mpp.stability.nowarn=true
+kotlin.mpp.enableGranularSourceSetsMetadata=true
+kotlin.native.enableDependencyPropagation=false
 
 org.gradle.jvmargs=-Xmx3g
 org.gradle.parallel=true
 org.gradle.workers.max=4
+
+mavenRegistryName=GitHubPackages
+mavenRegistryUrl=https://maven.pkg.github.com/SBNTT/mpp-game-bootstrap
+mavenRegistryUsernameEnvVariable=GITHUB_ACTOR
+mavenRegistryPasswordEnvVariable=GITHUB_TOKEN
+
+group=me.sbntt.mppgame
+name=bootstrap
+version=0.1.0
+
+glfwVersion=3.3.4
+vulkanVersion=1.2.174
+commonVersion=0.1.0
