--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -29,32 +29,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  publish_main:
-    name: Publish mpp module
-    runs-on: ubuntu-latest
-    needs: checkNewVersion
-    if: needs.checkNewVersion.outputs.needDeployment == 'true'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
-
-      - name: Setup JDK
-        uses: actions/setup-java@v1
-        with:
-          java-version: '8'
-
-      - name: Publish main
-        run: ./gradlew publishKotlinMultiplatformPublicationToGitHubPackagesRepository
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  publish_macosX64:
-    name: Build & publish macosX64
-    runs-on: macos-latest
-    needs: [ checkNewVersion, publish_main ]
-    if: needs.checkNewVersion.outputs.needDeployment == 'true'
+  publish:
+    runs-on: ${{ matrix.os }}
+    needs: [ checkNewVersion ]
+    strategy:
+      matrix:
+        os: [ macos-latest, ubuntu-latest, windows-latest ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -67,73 +47,20 @@ jobs:
           java-version: '8'
 
       - name: Build
-        run: ./gradlew buildFromMacos
+        run: ./gradlew hostSpecificBuild
 
       - name: Publish
-        run: ./gradlew publishFromMacos
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  publish_linuxX64:
-    name: Build & publish linuxX64
-    runs-on: ubuntu-latest
-    needs: [ checkNewVersion, publish_main ]
-    if: needs.checkNewVersion.outputs.needDeployment == 'true'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
-
-      - name: Setup JDK
-        uses: actions/setup-java@v1
-        with:
-          java-version: '8'
-      
-      - name: Install build dependencies
-        run: |
-          sudo apt update
-          sudo apt install xorg-dev gcc-multilib
-
-      - name: Build
-        run: ./gradlew buildFromLinux
-
-      - name: Publish
-        run: ./gradlew publishFromLinux
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  publish_windowsX64:
-    name: Build & publish windowsX64
-    runs-on: windows-latest
-    needs: [ checkNewVersion, publish_main ]
-    if: needs.checkNewVersion.outputs.needDeployment == 'true'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
-
-      - name: Setup JDK
-        uses: actions/setup-java@v1
-        with:
-          java-version: '8'
-
-      - name: Build
-        run: ./gradlew.bat buildFromWindows
-
-      - name: Publish
-        run: ./gradlew.bat publishFromWindows
+        run: ./gradlew hostSpecificPublish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   github_release:
     name: Create a github release
     runs-on: ubuntu-latest
-    needs: [ checkNewVersion, publish_main, publish_macosX64, publish_windowsX64, publish_linuxX64 ]
+    needs: [ checkNewVersion, publish ]
     steps:
       - name: Create github release
         uses: ncipollo/release-action@v1
         with:
-          tag: ${{ needs.checkNewVersion.outputs.libVersion}}
+          tag: ${{ needs.checkNewVersion.outputs.libVersion }}
           token: ${{ secrets.GITHUB_TOKEN }}
